--- a/OpenCase/RUS/news.html
+++ b/OpenCase/RUS/news.html
@@ -1,6 +1,7 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 	<head>
+        <meta charset="utf-8">
 		<title>Обновления</title>
 		<script src="../scripts/jquery.min.js"></script>
 		<script src="../scripts/jquery.cookie.js"></script>
