--- a/OpenCase/RUS/chat.html
+++ b/OpenCase/RUS/chat.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta charset = "utf-8">
     <link rel="stylesheet" type="text/css" href="../css/main.css">
     <link rel="stylesheet" type="text/css" href="../css/fonts.css">
     <link rel="stylesheet" type="text/css" href="../css/animate.css">
@@ -35,6 +36,10 @@
                 <button class="button_blue" onclick="register();">Register</button>
             </div>
         </div>
+    
+        <div class="chat__rooms">
+        </div>
+    
         <div id="chat">
             <ul class="chat__messages"> </ul>
             <div class="chat__write">
