--- a/OpenCase/RUS/chat.html
+++ b/OpenCase/RUS/chat.html
@@ -31,9 +31,11 @@
         <div id="login" style='display: none;'>
             <input type="text" placeholder="Email" id="email"></input>
             <input type="password" placeholder="Password" id="password"></input>
+            <span id="login-status"></span>
             <div id="login__buttons">
                 <button class="button_blue" onclick="login();">Sign in</button>
                 <button class="button_blue" onclick="register();">Register</button>
+                <a href="#" id="forgot-pass">Forgot password?</a>
             </div>
         </div>
     
