--- a/OpenCase/RUS/chat.html
+++ b/OpenCase/RUS/chat.html
@@ -34,7 +34,7 @@
             <input type="text" placeholder="Nickname" id="nickname" class="hide"></input>
             <span id="login-status"></span>
             <div id="login__buttons">
-                <button class="button_blue" onclick="login();" id="loginButton">Sign in</button>
+                <button class="button_blue" onclick="fbProfile.login();" id="loginButton">Sign in</button>
                 <button class="button_blue empty" id="registerButton">Register</button>
                 <a href="#" id="forgot-pass">Forgot password?</a>
             </div>
