Profile bg + Fluentim img

--- a/OpenCase/RUS/profile.html
+++ b/OpenCase/RUS/profile.html
@@ -277,8 +277,9 @@
                 <h1 class="profile__name">Loading...</h1>
                 <!--<h3 class="profile__status">Test status</h3> --></div>
             <div class="top_actions">
-                <div class="top__pm"><i class="fa fa-envelope-o" aria-hidden="true"></i></div> <img src="" class="profile__img">
-                <div class="top__trade"><i class="fa fa-exchange" aria-hidden="true"></i></div>
+                <div class="top__pm disabled"><i class="fa fa-envelope-o" aria-hidden="true"></i></div>
+                <img src="" class="profile__img">
+                <div class="top__trade disabled"><i class="fa fa-exchange" aria-hidden="true"></i></div>
             </div>
         </div>
         <div class="stats">
@@ -336,7 +337,7 @@
                     $(".edit-profile-container").show();
                 }
                 if (userInfo.bigBG) {
-                    $('.top__bg').css('background-image', 'url('+userInfo.bigBG+')');
+                    $('.top__bg').css('background-image', 'url("'+userInfo.bigBG+'")');
                 }
             });
             fbProfile.repVal(uid, function (rep, userRep) {
