--- a/OpenCase/RUS/cases.html
+++ b/OpenCase/RUS/cases.html
@@ -88,7 +88,7 @@ $(function () {
 
 		var version = client.getCurrentAppVersionName();
 
-		if (version != "1.5") {
+		if (parseFloat(version) < 1.5) {
 			$('body').append('<div class="new-version"><b>' + Localization.cases2['new_version'][Settings.language] + '</b><span class="new-version__button" id="new-version__later">' + Localization.cases2['new_version_button_later'][Settings.language] + '</span><span class="new-version__button" id="new-version__update">' + Localization.cases2['new_version_button_update'][Settings.language] + '</span></div>');
 		}
 	}
