--- a/OpenCase/RUS/profile.html
+++ b/OpenCase/RUS/profile.html
@@ -344,7 +344,7 @@
                     $(".left-side, .right-side").show();
                 }
                 if (userInfo.bigBG && fbProfile.ifValidImg(userInfo.bigBG)) {
-                    $('.top__bg').attr('style', 'background:url("'+userInfo.bigBG+'"); background-size: cover;');
+                    $('.top__bg').attr('style', 'background:url('+userInfo.bigBG+'); background-size: cover;');
                     //$('.top__bg').css('background-image', 'url("'+userInfo.bigBG+'")');
                 }
             });
