--- a/OpenCase/RUS/profile.html
+++ b/OpenCase/RUS/profile.html
@@ -343,6 +343,9 @@
                     $('.rep').hide();
                     $(".left-side, .right-side").show();
                 }
+                if (userInfo.colorBG) {
+                    $('.top__bg').attr('style', 'background:'+userInfo.colorBG);
+                }
                 if (userInfo.bigBG && fbProfile.ifValidImg(userInfo.bigBG)) {
                     $('.top__bg').attr('style', 'background:url('+userInfo.bigBG+'); background-size: cover;');
                     //$('.top__bg').css('background-image', 'url("'+userInfo.bigBG+'")');
