--- a/OpenCase/RUS/profile.html
+++ b/OpenCase/RUS/profile.html
@@ -343,12 +343,11 @@
                     $('.rep').hide();
                     $(".left-side, .right-side").show();
                 }
-                if (userInfo.colorBG) {
-                    $('.top__bg').attr('style', 'background:'+userInfo.colorBG);
-                }
                 if (userInfo.bigBG && fbProfile.ifValidImg(userInfo.bigBG)) {
-                    $('.top__bg').attr('style', 'background-image:url('+userInfo.bigBG+'); background-size: cover;');
-                    //$('.top__bg').css('background-image', 'url("'+userInfo.bigBG+'")');
+                    //$('.top__bg').attr('style', 'background-image:url('+userInfo.bigBG+'); background-size: cover;');
+                    $('.top__bg').css('background-image', 'url("'+userInfo.bigBG+'")');
+                } else if (userInfo.colorBG) {
+                    $('.top__bg').attr('style', 'background:'+userInfo.colorBG);
                 }
             });
             fbProfile.repVal(uid, function (rep, userRep) {
