--- a/OpenCase/RUS/profile.html
+++ b/OpenCase/RUS/profile.html
@@ -345,7 +345,7 @@
                 }
                 if (userInfo.bigBG && fbProfile.ifValidImg(userInfo.bigBG)) {
                     //$('.top__bg').attr('style', 'background-image:url('+userInfo.bigBG+'); background-size: cover;');
-                    $('.top__bg').css('background', 'url('+userInfo.bigBG+')');
+                    $('.top__bg').css('background-image', 'url('+userInfo.bigBG+')');
                 } else if (userInfo.colorBG) {
                     $('.top__bg').attr('style', 'background:'+userInfo.colorBG);
                 }
