--- a/OpenCase/RUS/chat.html
+++ b/OpenCase/RUS/chat.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="../css/chat.css">
     <link rel="stylesheet" type="text/css" href="../css/buttons.css">
     <link rel="stylesheet" type="text/css" href="../css/loading.css">
+    <link rel="stylesheet" type="text/css" href="../css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="../css/lobibox.min.css"/>
     <script src="../scripts/build/libs.js"></script>
     <script src="../scripts/main.js"></script>
