No special case from browser

--- a/OpenCase/RUS/cases.html
+++ b/OpenCase/RUS/cases.html
@@ -137,7 +137,7 @@ $('#showVideoAd').on('click', function () {
 	if (isAndroid())
 		client.showVideoAd("open.html?caseId=" + $('.js-secretField').text() + '&fromAd=1');
 	else {
-		window.location = "open.html?caseId=" + $('.js-secretField').text() + '&fromAd=1';
+		//window.location = "open.html?caseId=" + $('.js-secretField').text() + '&fromAd=1';
 	}
 });
 
