--- a/OpenCase/RUS/spinking.html
+++ b/OpenCase/RUS/spinking.html
@@ -50,7 +50,7 @@
 <input type="text" id="bet" maxlength='7' pattern="^[0-9]+$"/>
 <div class='buttons'>
 	<button id="addItems">Внести предметы</button>
-	<button id="spin" onclick="return;spinking.buttonSpin();">Spin</button>
+	<button id="spin" onclick="return;spinking.buttonSpin();" disabled="true">Spin</button>
 </div>
 <ul class="winList"></ul>
 
