--- a/OpenCase/RUS/inventory.html
+++ b/OpenCase/RUS/inventory.html
@@ -303,6 +303,7 @@
 			}
 			$("#"+weaponId+"-inventoryItem").remove();
 			Sound("buy");
+            $(this).hide();
 			Player.doubleBalance += price;
 			$("#menu_doubleBalance").text(Player.doubleBalance);
 			saveStatistic('doubleBalance', Player.doubleBalance);
