--- a/OpenCase/RUS/rulet.html
+++ b/OpenCase/RUS/rulet.html
@@ -1,6 +1,7 @@
-﻿<html>
+<html>
 <head>
 <title>Джекпот</title>
+    <meta charset="utf-8">
 <!-- Стили -->
 <link rel="stylesheet" type="text/css" href="../css/rarity.css">
 <link rel="stylesheet" type="text/css" href="../css/main.css">
