--- a/OpenCase/RUS/RPS.html
+++ b/OpenCase/RUS/RPS.html
@@ -1,6 +1,7 @@
-﻿﻿<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <head>
 <title>Камень-ножницы-бумага</title>
+    <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="../css/fonts.css">
 <link rel="stylesheet" type="text/css" href="../css/main.css">
 <link rel="stylesheet" type="text/css" href="../css/rulet.css">
