--- a/OpenCase/RUS/market.html
+++ b/OpenCase/RUS/market.html
@@ -1,7 +1,8 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 <title>Магазин</title>
+    <meta charset="utf-8">
 <!-- Стили -->
 <link rel="stylesheet" type="text/css" href="../css/main.css">
 <link rel="stylesheet" type="text/css" href="../css/font-awesome.min.css">
