--- a/OpenCase/RUS/settings.html
+++ b/OpenCase/RUS/settings.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>Настройки</title>
+    <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="../css/inventory.css">
 <link rel="stylesheet" type="text/css" href="../css/main.css">
 <link rel="stylesheet" type="text/css" href="../css/fonts.css">
