--- a/OpenCase/RUS/settings.html
+++ b/OpenCase/RUS/settings.html
@@ -232,7 +232,7 @@ div#avatar {
 	</div>
 </div>
 <div class='option-block'>
-	<span class='option-block__name' id='local-beta'>Эксперементальные функции</span>
+	<span class='option-block__name' id='local-beta'>Экспериментальные функции</span>
 	<div class='option inline'><span id='local-beta_trade'>Обмен оружием с игроками</span>
 		<label class='switch-label'>
 			<input type="checkbox" name='trades' class='hide' />
