--- a/OpenCase/RUS/profile.html
+++ b/OpenCase/RUS/profile.html
@@ -172,10 +172,8 @@
             </div>
         </div>
         
+    <div style='position: fixed;bottom: 0;background: #a41919;padding: 5px;width: 100%;text-align: center;' id='local-trades-off'>Трейды выключены для исправления.<br>Сегодня будут включены обратно.</div>
     </div>
-    <script>
-        
-    </script>
 </body>
 
 </html>
