--- a/OpenCase/RUS/faq.html
+++ b/OpenCase/RUS/faq.html
@@ -1,7 +1,8 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 	<head>
 		<title>FAQ</title>
+        <meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="../css/fonts.css" />
 		<link rel="stylesheet" type="text/css" href="../css/main.css" />
 
@@ -10,6 +11,7 @@
 		<script src="../scripts/main.js"></script>
 		<script src="../scripts/settings.js"></script>
 		<script src="../scripts/cases2.js"></script>
+        <link rel="stylesheet" type="text/css" href="../css/font-awesome.min.css">
 
 		<script src="../scripts/navigationMenu.js"></script>
 		<link rel="stylesheet" href="../css/navigationMenu.css" />
@@ -59,6 +61,30 @@
 				<li>
 					<span class='question' id='js-local-question-2'>Почему цена предмета $0?</span>
 					<span class='answer' id='js-local-answer-2'>Цена предмета берется из базы. Если в базе нет цены, берётся с Торговой площадки стима. Если и там нет, тогда $0.<br>Если в стиме появился этот предмет, а у вас в инвентаре до сих пор цена $0 - откройте описание предмета, подождите пока загрузиться цена, закройте описание предмета и перезайдите в инвентарь.</span>
+				</li>
+				<li>
+					<span class='question' id='js-local-question-trade'>Как обмениваться предметами?</span>
+					<span class='answer' id='js-local-answer-trade'>Для начала необходимо включить обмен в настройках.<br><b>Как отправить предложение обмена</b><br>
+                        <ol>
+                            <li>Откройте профиль другого игрока (он тоже должен включить обмен в настройках)</li>
+                            <li>Нажмите на значок обмена (<i class="fa fa-exchange" aria-hidden="true"></i>)</li>
+                            <li>Выберите оружие, которое хотите отправить игроку и нажмите "Далее"</li>
+                            <li><s>Выберите оружие, которое хотите получить от игрока и нажмите "Далее"</s> (На данный момен просмотр инвентаря другого игрока невозможен)</li>
+                            <li>Если вы хотите подарить эти предметы (и ничего не получить взамен), поставьте галочку напротив строки "Это подарок".</li>
+                            <li>Нажмите кнопку "Отправить обмен"</li>
+                        </ol>
+                        <b>Как получить предметы</b>
+                        <ol>
+                            <li>Откройте свой профиль</li>
+                            <li>Нажмите на значок обмена (<i class="fa fa-exchange" aria-hidden="true"></i>)</li>
+                            <li>Из списка выберите игрока, с которым хотите обменяться предметами (если нажать на его аватарку, можно открыть его профиль)</li>
+                            <li>Выберите нужный трейд</li>
+                            <li>Добавьте свои предметы</li>
+                            <li>Когда будете готовы, поставьте галочку напротив поля "Отметьте, когда будете готовы к обмену"</li>
+                            <li>Подождите пока другой игрок тоже поставит галочку и нажмите кнопку "Совершить обмен". Или её может нажать другой игрок.</li>
+                        </ol>
+                        Если другой игрок нажал кнопку "Совершить обмен", когда вы были не в окне обмена, откройте этот трейд, чтобы получить предметы.
+                    </span>
 				</li>
 				<li>
 					<span class='question' id='js-local-question-rank'>Как поднять ранг?</span>
