--- a/OpenCase/RUS/profile.html
+++ b/OpenCase/RUS/profile.html
@@ -67,6 +67,10 @@
                 <div class="stats__rate__text stat__text">Reputation</div>
             </div>
         </div>
+        <div class="moder-menu" style="display: none">
+            <div class='block-container'><button class="button_blue" id='block-chat' data-action="block">Chat ban</button><div class='block-reason' id='block-chat-reason'>Chat doesn't banned</div></div>
+            <div class='block-container'><button class="button_blue" id='block-trade' data-action="block">Trade ban</button><div class='block-reason' id='block-trade-reason'>Trades doesn't banned</div></div>
+        </div>
         <div class="posts">
             <div class="posts__new-post">
                 <div class="new-post__text" contenteditable="true" placeholder="Есть чем поделиться?"></div>
