--- a/OpenCase/RUS/double-Online.html
+++ b/OpenCase/RUS/double-Online.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" type="text/css" href="../css/fonts.css">
 <link rel="stylesheet" type="text/css" href="../css/inventory-portable.css">
 <link rel="stylesheet" type="text/css" href="../css/loading.css">
+<link rel="stylesheet" type="text/css" href="../css/buttons.css">
 
 
 <!-- Скрипты -->
@@ -21,6 +22,7 @@
 <script src="../scripts/prices.js"></script>
 <script src="../scripts/jackpotBots.js"></script>
 <script src="../scripts/inventory.js"></script>
+<script src="../scripts/profile.js"></script>
 <script src="../scripts/navigationMenu.js"></script>
 <link rel="stylesheet" href="../css/navigationMenu.css">
 <link rel="stylesheet" type="text/css" href="../css/double.css">
@@ -75,6 +77,16 @@
 	</td></tr>
 </table>
 
+<div class='chat closed'>
+    <div class='chat__toggle'>Chat (<span class='chat__toggle__new-messages'>0</span>)</div>
+    <ul class='chat__messages'>
+        <li class='chat__message__message info'>Welcome to chat!</li>
+    </ul>
+    <div class='chat__new-message'>
+        <div class="chat__new-message__textbox input-text light" contenteditable="true" placeholder="Send message" max="100"></div>
+        <button class="button_blue" id='chat-send-msg'>Send</button>
+    </div>
+</div>
 
 <!-- Инвентарь -->
 <div class="inventoryList" style="display: none;">
