--- a/OpenCase/RUS/double-Online.html
+++ b/OpenCase/RUS/double-Online.html
@@ -38,7 +38,7 @@
 <body data-localization="double" data-inventory='no-load'>
 	<div class="site-overlay"></div>
 <div id="container">
-<div class="navigationBar" data-menu-EN="Double" data-menu-RU="Дабл"></div>
+<div class="navigationBar" data-menu-EN="Double Online" data-menu-RU="Дабл онлайн"></div>
 <div class='onlineCount'></div>
 <span id='last_games_text' class='margin-left-body'>Previous numbers:</span>
 <div class='last-games'></div>
