Скрипты для игр в отдельной папке & k + kk в дабле :game_die:

--- a/OpenCase/RUS/double-Online.html
+++ b/OpenCase/RUS/double-Online.html
@@ -20,7 +20,6 @@
 <script src="../scripts/skinNames.js"></script>
 <script src="../scripts/quality.js"></script>
 <script src="../scripts/prices.js"></script>
-<script src="../scripts/jackpotBots.js"></script>
 <script src="../scripts/inventory.js"></script>
 <script src="../scripts/profile.js"></script>
 <script src="../scripts/navigationMenu.js"></script>
@@ -31,8 +30,7 @@
 
 <link rel="stylesheet" type="text/css" href="../css/animate.css">
 
-<script src="../scripts/doubleOnline.js"></script>
-<!-- <script src="../scripts/min/double.js"></script> -->
+<script src="../scripts/games/doubleOnline.js"></script>
 </head>
 
 <body data-localization="double" data-inventory='no-load'>
