--- a/OpenCase/RUS/double.html
+++ b/OpenCase/RUS/double.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 <title>Double</title>
@@ -28,7 +28,7 @@
 
 <link rel="stylesheet" type="text/css" href="../css/animate.css">
 
-<script src="../scripts/double.js"></script>
+<script src="../scripts/games/double.js"></script>
 <!-- <script src="../scripts/min/double.js"></script> -->
 </head>
 
