--- a/OpenCase/RUS/RPS.html
+++ b/OpenCase/RUS/RPS.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <head>
 <title>Камень-ножницы-бумага</title>
     <meta charset="utf-8">
@@ -57,6 +57,6 @@
 	</div>
 
 </div>
-<script src="../scripts/rps.js"></script>
+<script src="../scripts/games/rps.js"></script>
 </body>
 </html>
