--- a/OpenCase/RUS/double-Online.html
+++ b/OpenCase/RUS/double-Online.html
@@ -10,6 +10,7 @@
 <link rel="stylesheet" type="text/css" href="../css/inventory-portable.css">
 <link rel="stylesheet" type="text/css" href="../css/loading.css">
 <link rel="stylesheet" type="text/css" href="../css/buttons.css">
+<link rel="stylesheet" type="text/css" href="../css/online-games.css">
 
 
 <!-- Скрипты -->
@@ -31,6 +32,7 @@
 <link rel="stylesheet" type="text/css" href="../css/animate.css">
 
 <script src="../scripts/games/doubleOnline.js"></script>
+<script src="../scripts/games/online-games.js"></script>
 </head>
 
 <body data-localization="double" data-inventory='no-load'>
