about link to crash

--- a/OpenCase/RUS/about.html
+++ b/OpenCase/RUS/about.html
@@ -75,7 +75,7 @@
             <h3><span id='copyright'>Авторские права</span></h3>
             <p id='local-4'>Вся информация взята из открытых источников. Если что-либо в приложении нарушает ваши авторские права, свяжитесь со мной.</p>
             <p id='secret' style='display:none'> <a href='spinking.html'>Spinking</a>
-                <br> <a href='double-Online.html'>Double Online!</a>
+                <br> <a href='crash-Online.html'>Crash Online!</a>
                 <br> </p>
         </div>
     </div>
