--- a/OpenCase/RUS/crash-Online.html
+++ b/OpenCase/RUS/crash-Online.html
@@ -47,10 +47,10 @@
         
         <div class="tabs">
             <input id="tab1" type="radio" name="tabs" checked>
-            <label for="tab1" title="Bets">Bets</label>
+            <label for="tab1" title="Bets" id='local-bets'>Bets</label>
 
             <input id="tab2" type="radio" name="tabs">
-            <label for="tab2" title="History">History</label>
+            <label for="tab2" title="History" id='local-history'>History</label>
             <section id="history">
                 <ul class="history"></ul>
             </section>
