--- a/OpenCase/RUS/chat.html
+++ b/OpenCase/RUS/chat.html
@@ -23,11 +23,12 @@
     <script src="../scripts/chat.js"></script>
     <script src="../scripts/localization.js"></script>
     
-    <!-- Upload images in chat -->
+    <!-- Upload images in chat -
     <script src="../scripts/chatImages/jquery.ui.widget.js"></script>
     <script src="../scripts/chatImages/jquery.iframe-transport.js"></script>
     <script src="../scripts/chatImages/jquery.fileupload.js"></script>
     <script src="../scripts/chatImages/jquery.cloudinary.js"></script>
+-->
     
     <title>Chat</title>
 </head>
