--- a/OpenCase/RUS/double.html
+++ b/OpenCase/RUS/double.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Double</title>
+    <meta charset="utf-8">
 <!-- Стили -->
 <link rel="stylesheet" type="text/css" href="../css/rarity.css">
 <link rel="stylesheet" type="text/css" href="../css/main.css">
