--- a/OpenCase/RUS/profile.html
+++ b/OpenCase/RUS/profile.html
@@ -17,6 +17,7 @@
     <script src="../scripts/build/libs.js"></script>
     <script src="../scripts/main.js"></script>
     <script src="../scripts/fb-inventory.js"></script>
+    <script src="../scripts/weapons.js"></script>
     <script src="../scripts/skinNames.js"></script>
     <script src="../scripts/prices.js"></script>
     <script src="../scripts/quality.js"></script>
@@ -50,7 +51,7 @@
         <div class="stats">
             <div class="stats__rank stats__block">
                 <div class="stats__rank__rank stat__num"></div>
-                <div class="stats__rank__text stat__text">EXP</div>
+                <div class="stats__rank__text stat__text">Level</div>
             </div>
             <div class="stats__line"></div>
             <div class="stats__inventory stats__block">
