--- a/OpenCase/RUS/statistic.html
+++ b/OpenCase/RUS/statistic.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
 <script src="../scripts/jquery.min.js"></script>
 <script src="../scripts/jquery.cookie.js"></script>
+    <script src="../scripts/build/libs.js"></script>
 <script src="../scripts/main.js"></script>
 <script src="../scripts/settings.js"></script>
 <script src="../scripts/cases2.js"></script>
@@ -78,9 +79,9 @@ tr:nth-child(2n) {
 <tr><td id="coinflip-max-win-text">Максимальный выигрыш в монетке: </td><td id="coinflip-max-win"></td></tr>
 <tr><td id="double-text">Дабл выиграно/проиграно: </td><td id="double"></td></tr>
 </table>
-<div class='buttons-div'>
+<!--<div class='buttons-div'>
 	<a href='ranks.html' class='button'>Ранги</a>
-</div>
+</div>-->
 </div>
 <script>
 $(function(){
